testsuite/tests/lexical_envs/invalid_subunit_root/derived.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example" ",")
                             | DerivedExample("example" ";"))
}

class FooNode implements Node[FooNode] {
}

@ple_unit_root class Example: FooNode {
}

class DerivedExample: Example {
}
